--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "minimum-stability": "stable",
     "require": {
         "symfony/filesystem": "^4.3",
-        "collgus/exceptions": "@dev"
+        "collgus/exceptions": "@dev",
+        "symfony/finder": "^4.3"
     }
 }
