--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "autoload": {
         "classmap": ["generated-classes/"],
         "files": [
-            "src/helpers.php"
+            "helpers.php"
         ],
         "psr-4": {
             "Collgus\\GF\\": "src/",
